Makefile : adicionando flag do valgrind para compilacao.,

--- a/servidor/Makefile
+++ b/servidor/Makefile
@@ -7,10 +7,10 @@ IDIR = src
 CFLAGS=-Wall -Wextra
 
 ifdef RELEASE
-	CFLAGS += -O2
+  CFLAGS += -O2
 else
-  CFLAGS += -ggdb3 -fsanitize=address
-  #CFLAGS += -ggdb3
+  #CFLAGS += -ggdb3 -fsanitize=address
+ CFLAGS += -ggdb3
 endif
 
 LIBS=-lm
