Makefile : corrigindo bug -> pasta obj nao criada.

--- a/servidor/Makefile
+++ b/servidor/Makefile
@@ -20,16 +20,23 @@ _DEPS_C = server_lib.c request_lib.c http_utils.c socket_utils.c thread_utils.c
 _DEPS = $(_DEPS_C) $(patsubst %.c,%.h,$(_DEPS_C))
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
 
-_OBJ = main.o $(patsubst %.c,%.o,$(_DEPS_C))
+
+_OBJ = main.o $(patsubst %.c,%.o,$(_DEPS_C)) 
 OBJ = $(patsubst %,$(ODIR)/%,$(_OBJ))
+
+
 $(ODIR)/%.o: $(IDIR)/%.c $(DEPS)
-	mkdir -p $(ODIR)
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 prog: $(OBJ)
 	gcc -o $@ $^ $(CFLAGS) $(LIBS)
 
+$(OBJ): | $(ODIR)
+
+$(ODIR):
+	mkdir -p $(ODIR)
 .PHONY: clean
 
 clean:
 	rm -f $(ODIR)/*.o *~ core $(INCDIR)/*~
+
